// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semantic-release with options should return a config to publish to NPM 1`] = `
Object {
  "branches": Array [
    "+([0-9])?(.{+([0-9]),x}).x",
    "main",
    "next",
    Object {
      "name": "alpha",
      "prerelease": true,
    },
    Object {
      "name": "beta",
      "prerelease": true,
    },
    Object {
      "name": "canary",
      "prerelease": true,
    },
    "master",
  ],
  "plugins": Array [
    "@semantic-release/commit-analyzer",
    "@semantic-release/release-notes-generator",
    "@semantic-release/npm",
    "@semantic-release/github",
  ],
}
`;

exports[`semantic-release with options should return a default config 1`] = `
Object {
  "branches": Array [
    "+([0-9])?(.{+([0-9]),x}).x",
    "main",
    "next",
    Object {
      "name": "alpha",
      "prerelease": true,
    },
    Object {
      "name": "beta",
      "prerelease": true,
    },
    Object {
      "name": "canary",
      "prerelease": true,
    },
    "master",
  ],
  "plugins": Array [
    "@semantic-release/commit-analyzer",
    "@semantic-release/release-notes-generator",
    "@semantic-release/github",
  ],
}
`;
